# vein-wiki-tools

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/vein_wiki_tools/: base.py  errors.py  example-user-config.py  example-user-password.cfg  settings.py  test_bot_writing.py
src/vein_wiki_tools/clients/: file.py  terminal.py
src/vein_wiki_tools/clients/pakdump/: __init__.py  ammo.py  build.py  consumables.py  firearms.py  models.py  recipes.py  services.py  spawnlists.py  tools.py
src/vein_wiki_tools/data/: models.py
src/vein_wiki_tools/data/csv/: load.py  models.py
src/vein_wiki_tools/data/pakdump/: pakdump.py
src/vein_wiki_tools/families/: vein_family.py
src/vein_wiki_tools/models/: __init__.py  common.py  items.py
src/vein_wiki_tools/scripts/: get_item.py  write_items.py  write_ue_models.py
src/vein_wiki_tools/services/: auth.py  compare.py  items.py  template.py  wiki_pages.py
src/vein_wiki_tools/templates/: base.jinja  conditions.jinja  construction.jinja  dismantle.jinja  dismantle_into.jinja  food_condition_set.jinja  infobox_item.jinja  infobox_weapon.jinja  item.jinja  item_general_info.jinja  item_infobox.jinja  repair.jinja  requirements.jinja  scavenging.jinja
src/vein_wiki_tools/templates/infoboxes/: infobox_clothing.jinja  infobox_fluid.jinja  infobox_item.jinja  infobox_weapon.jinja
src/vein_wiki_tools/templates/ue/: ammo.jinja  firearm.jinja  fluid.jinja  fluid_container.jinja  magazine.jinja
src/vein_wiki_tools/utils/: file_helper.py  iters.py  logging.py  metrology.py
tests/: conftest.py
tests/clients/: test_build.py  test_models.py  test_recipes.py  test_services.py  test_spawnlists.py  test_tools.py
tests/data/csv/: test_load.py  vein_items_subset.csv
tests/data/pakdump/: test_pakdump.py
tests/models/: test_common.py
tests/services/: test_template.py  test_wiki_pages.py
tests/testfiles/: BP_Melee_Shovel  BP_Melee_Shovel.json  vein_items_shovel.csv
tests/testfiles/Vein/BuildObjects/Utilities/: BO_MakeshiftBattery.json
tests/testfiles/Vein/Fluids/: FL_AnabolicSteroid.json  FL_Beer.json  FL_ColdMedicine.json
tests/testfiles/Vein/Items/Clothing/03_Jacket/: BP_CL_MilitaryJacket.json
tests/testfiles/Vein/Items/Tools/: BP_SleepingBag01.json  BP_SleepingBag02.json
tests/testfiles/Vein/Items/Weapons/Melee/Crafted/: BP_Melee_ClawSword.json
tests/testfiles/Vein/Items/Weapons/Ranged/: BP_Firearm_Flock17.json
tests/testfiles/Vein/Recipes/CharcoalKiln/: HCR_RefinedCharcoal.json
tests/testfiles/Vein/Recipes/Cooking/Pot/: RP_MichiganSauce.json
tests/testfiles/Vein/Recipes/Crafting/Parts/: CR_MetalBrackets.json
tests/testfiles/Vein/Recipes/Furnace/: HCR_CopperIngot.json
tests/testfiles/Vein/Spawnlists/ItemListCollections/02Dismantling/: ILC_Ammo_Object.json
tests/testfiles/Vein/Spawnlists/ItemLists/: IL_Gunpowder.json  IL_ScrapPlastic.json
tests/testfiles/Vein/Tools/: T_BasicCutting.json
tests/testfiles/pakdump/: BP_Ammo_9mm.json  BP_Magazine_MP5.json  T_Thumb_BP_Ammo_9mm_0.json
tests/utils/: test_metrology.py
