[project]
name = "vein-wiki-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Håvard Slettvold",email = "havard@slettvold.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywikibot (>=10.7.0,<11.0.0)"
]

[tool.poetry]
packages = [{include = "vein_wiki_tools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
